Overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -39,9 +39,9 @@
 
 .containerBox .quote-design {
   margin-top: 30px;
-  margin-bottom: 10px;
+  margin-bottom: auto;
   font-size: 18px;
-  
+  overflow: auto;
 }
 
 .containerBox .author-design {
